2004-04-30  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     * Add an example subdir, with a real example on how to read + write a 
       dicom image

2004-04-30  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
     * Doc/gdcmUML.xmi added raw UML class view (umbrello format)
     * Doc/CMakeLists.txt: the main page is now properly differentiated
       between the developper and user version.
     * Doc/doxygen.config.in: dropped search related obsolete flags
     * src/gdcmParser.h, gdcmHeader.h: doxygenation

2004-04-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
     * DEVELOPPER: added some helpfull comments for compile/test/install
       when using cmake.

2004-04-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     * ENH: 1. Remove remp solution of gdcmTests.cxx+ gdcmMain directly in 
               src directory, now generated in the build dir.
            2. Tests as mentionned smarter
            3. Some clean up
            4. Add a new method in gdcmDict that return the PubDict by name 
	       this is interesting for 3rd party lib like ITK, 
	       where we could set the institution name / patient name...

       * ENH: 1. Now the test suite is working for real
              2. All binaries are now output in the gdcm-bin directory 
	         (this was not true before)		 

2004-04-28  Jean-Pierre Roux
     * ENH add the provisional  gdcmHeader::SQDepthLevel to allow 
           SeQuence indented printing of Dicom Header.
     * ENH merge methods gdcmParser::Parse and gdcmParser::LoadHeaderEntries
           into the single gdcmParser::LoadHeaderEntries for efficiency purpose.
	   Computation of SQDepthLevel is now part of gdcmHeader constructor
     * ENH add self defined param 'new' to PrintHeader to 'show' the SeQuence
           tree-like structure of a Dicom Header.
     * FIX Test code cleaning     
           
2004-04-25  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     * ENH: Adding automatic testing